# jplaw_tools

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
data_types/: Cargo.toml
data_types/src/: article.rs  jorei.rs  law.rs  lib.rs  precedent.rs
jplaw_data_types/: Cargo.toml
jplaw_data_types/src/: analysis.rs  article.rs  jorei.rs  law.rs  listup.rs  precedent.rs
jplaw_io/: .gitignore  Cargo.toml
jplaw_io/src/: lib.rs
jplaw_pdf2text/: Cargo.toml
jplaw_pdf2text/src/: lib.rs
jplaw_pdf2text/tests/: test.rs
pdf2text/: Cargo.toml
pdf2text/src/: lib.rs
pdf2text/tests/: test.rs
src/: get_article.rs  lib.rs
