[package]
name = "data_types"
version = "0.1.0"
description = ""
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
japanese_law_xml_schema = "1.0.0"
serde = { version = "1.0.198", features = ["derive"] }
