[package]
name = "jplaw_data_types"
description = ""
authors.workspace = true
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
japanese_law_xml_schema = "3.0.0"
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0.59"
