[package]
name = "jplaw_data_types"
description = "法令を扱い解析する際に必要なデータ構造"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
japanese_law_xml_schema = "3.0.0"
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0.59"
