[package]
name = "jplaw_io"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "ファイル入出力とログの設定を行う"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
serde_json = { version = "1.0.116", features = ["std"] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["tracing", "io-std", "fs", "io-util", "rt", "macros", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
