[package]
name = "jplaw_pdf2text"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "判例のPDFファイルから本文テキストを抽出する"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf-extract = "0.7.5"
regex = "1.10.4"
thiserror = "1.0.58"
