[package]
name = "pdf2text"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "PDFファイルから本文テキストを抽出する"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf-extract = "0.7.5"
regex = "1.10.4"
thiserror = "1.0.58"
